--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
 
+            <!-- <input type="text" placeholder="Final score" class="final-score"> -->
+
             <img src="dice-5.png" alt="Dice" class="dice">
+            <!-- <img src="dice-5.png" alt="Dice" class="dice" id="dice-1">
+            <img src="dice-4.png" alt="Dice" class="dice" id="dice-2"> -->
         </div>
 
         <script src="app.js"></script>
+        <!-- <script src="codingChallenge6.js"></script> -->
     </body>
 </html>
